# HelloCI

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-cpp-rpi4.yml  cmake-multi-platform.yml  cmake-single-platform.yml
source/: HelloCpp.cpp  hello_c.c
tool/: build_VS.cmd  build_clang.cmd  build_gcc.cmd  cover_clang.cmd  cover_g++.cmd  cover_gcc.cmd
